--- a/public/style/view.css
+++ b/public/style/view.css
@@ -1,14 +1,26 @@
+main{
+ width: 100%;
+ height: 100vh;
+ /* margin-bottom: 5rem; */
+ padding-bottom: 2rem;
+}
 main div{
  margin-top: 2rem;
  width: 100%;
  background-color: black;
  text-align: center;
- height: 40rem;
+ height: 35rem;
  color: white;
 }
 
 main div img{
-    margin-top: 1rem;
- width: 8rem;
- height: 8rem;
+ margin-top: 1rem;
+ width: 15rem;
+ height: 15rem;
+ object-fit: cover;
+}
+#name{
+ font-size: 1.4rem;
+ font-family: sans-serif;
+ margin: 10px auto;
 }
