--- a/views/create_character.ejs
+++ b/views/create_character.ejs
@@ -32,25 +32,25 @@
     <div>
         <img src="/imgs/Low-Res-Kamado-Tanjiro-from-Demon-Slayer.webp" alt="" srcset="">
     </div>
-        <form action="/create" method="POST">
+        <form action="/create" enctype="multipart/form-data" method="POST">
         <div id="img">
             <!-- <label for="name">add</label> -->
             <img src="/imgs/IMG_0923.JPG" alt="" >
             <img src="" alt="" id='hidden' hidden>
-            <input type="file" id="name" >
+            <input type="file" id="name" name="image" required>
                 <!-- <svg  xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="currentColor" d="M24 17.995h-6v5.979h-4v-5.979H8v-3.984h6V8.027h4v5.984h6zM28 .052H4a4.008 4.008 0 0 0-4 3.99v23.922a4.007 4.007 0 0 0 4 3.984h24a4.007 4.007 0 0 0 4-3.984V4.042a4.01 4.01 0 0 0-4-3.99z" hidden/></svg> -->
         </div>
         <div class="input">
             <label for="name">Name</label>
-            <input type="text" id="name" name="name"> 
+            <input type="text" id="name" name="name" maxlength="30" required> 
         </div>
         <div class="desc">
             <label for="desc">Desciption</label>
-            <textarea id="desc" name="description" rows="4" column="10"></textarea>
+            <textarea id="desc" name="description" rows="4" column="10" maxlength="50" required></textarea>
         </div>
         <div class="input">
             <label for="author">Author name</label>
-            <input type="text" id="author" name="author">
+            <input type="text" id="author" name="author" maxlength="30" required>
         </div>
         <div class="select">
             <label for="">Character Nature</label>
