--- a/views/heroes.ejs
+++ b/views/heroes.ejs
@@ -29,28 +29,33 @@
     </header>
     <main>
         <ul>
-           
+            <% for (const hero of heroes){ %>
+
                 <li>
                     <div class="container">
                         <div>
-                            <h1>Hello world</h1>
-                            <address>Author </address>|<time> 22-01-2023</time>
-                            <p>Description Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima sunt maxime veritatis vero, natus dolore libero laboriosam officiis consequuntur est debitis incidunt neque labore autem saepe! Fugiat nobis aliquam aut.</p>
+                            <h1><%= hero.name %></h1>
+                            <address><%= hero.author %> </address>|<time><%= hero.date %></time>
+                            <p><%= hero.desc %></p>
                         </div>
 
                         <div id="crud">
-                            <button>Delete</button>
+                            <form action="/deletehero" method="POST">
+                                <input type="text" name="delete" value="<%= hero._id %>" hidden>
+                                <button>Delete</button>
+                            </form>
                             <button>update</button>
-                            <button>view</button>
+                            <a href="view/<%= hero._id %>"><button>view</button></a>
                         </div>
                         
                     </div>
                     <div class="container">
-                        <img src="/imgs/download.jpg" alt="" srcset="">
+                        <img src="<%= hero.img %>" alt="" srcset="">
                     </div>
                 </li>
-           
+            <% } %>
         </ul>
+
     </main>
 
 </body>
