--- a/public/style/style.css
+++ b/public/style/style.css
@@ -9,8 +9,11 @@ header{
  color: white;
  display: flex;
  justify-content: space-between;
- padding: 0 1rem;
+ padding: 0rem 0.5rem;
  text-align: center;
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
 
 header h2{
@@ -28,8 +31,8 @@ header ul{
  margin: 1.5rem 0;
  list-style: none;
  justify-content: space-between;
- gap: 2rem;
- margin-left: 5rem;
+ gap: 1.5rem;
+ margin-left: 4rem;
 }
 
 header ul a{
