--- a/views/heroes.ejs
+++ b/views/heroes.ejs
@@ -44,7 +44,7 @@
                                 <input type="text" name="delete" value="<%= hero._id %>" hidden>
                                 <button>Delete</button>
                             </form>
-                            <button>update</button>
+                            <a href="update/<%= hero._id %>"><button>update</button></a> 
                             <a href="view/<%= hero._id %>"><button>view</button></a>
                         </div>
                         
