--- a/public/style/view.css
+++ b/public/style/view.css
@@ -116,7 +116,20 @@ input, textarea{
  color: white;
  padding: 0.2rem 1rem;
  border: none;
+ cursor: pointer;
 }
 .form-button button:hover{
  background-color: rgb(32, 0, 0);
+}
+
+.commentparagraph{
+    color: rgba(255, 255, 255, 0.868);
+    height: 5rem;
+    overflow: hidden;
+}
+#comment{
+ resize: none;
+}
+#hidden{
+ display: hidden;
 }
